updated functional test build to use exec to see if it solves stack trace issues with forked vm
git-svn-id: https://svn.codehaus.org/grails/trunk@6688 1cfb16fd-6d17-0410-8ff1-b7e8e1e2867d